api/gtkdoc_h/239/geany-gtkdoc.h

typedef gint TMParserType;
typedef struct TMSourceFile TMSourceFile;
/**
 * TMSourceFile: 
 * @lang:  
 * @file_name:  Full file name (inc.
 * @short_name:  Just the name of the file (without the path)
 * @tags_array: (element-type TMTag):  Sorted tag array obtained by parsing the object.
 *
 * 
 * The TMSourceFile structure represents the source file and its tags in the tag manager. 
 * 
 *     
 *
 * 
 *
 */
struct TMSourceFile {
	/*< private >*/
	TMParserType lang;
	/*< public >*/
	char* file_name;
	/*< public >*/
	char* short_name;
	/*< public >*/
	GPtrArray* tags_array;
};
/**
 * tm_workspace_add_source_file: 
 * @source_file:  The source file to add to the workspace.
 *
 * 
 * Adds a source file to the workspace, parses it and updates the workspace tags. 
 * 
 *         
 *
 * 
 * 
 * 
 * 
 *         
 *
 */
void tm_workspace_add_source_file (TMSourceFile *source_file);
/**
 * tm_workspace_remove_source_file: 
 * @source_file:  Pointer to the source file to be removed.
 *
 * 
 * Removes a source file from the workspace if it exists. 
 * 
 *         
 *
 * 
 * This function also removes the tags belonging to this file from the workspace. To completely free the TMSourceFile pointer call tm_source_file_free() on it. 
 * 
 * 
 *         
 *
 */
void tm_workspace_remove_source_file (TMSourceFile *source_file);
/**
 * tm_workspace_add_source_files: 
 * @source_files: (element-type TMSourceFile):  The source files to be added to the workspace.
 *
 * 
 * Adds multiple source files to the workspace and updates the workspace tag arrays. 
 * 
 *         
 *
 * 
 * This is more efficient than calling tm_workspace_add_source_file() and tm_workspace_update_source_file() separately for each of the files. 
 * 
 * 
 *         
 *
 */
void tm_workspace_add_source_files (GPtrArray *source_files);
/**
 * tm_workspace_remove_source_files: 
 * @source_files: (element-type TMSourceFile):  The source files to be removed from the workspace.
 *
 * 
 * Removes multiple source files from the workspace and updates the workspace tag arrays. 
 * 
 *         
 *
 * 
 * This is more efficient than calling tm_workspace_remove_source_file() separately for each of the files. To completely free the TMSourceFile pointers call tm_source_file_free() on each of them. 
 * 
 * 
 *         
 *
 */
void tm_workspace_remove_source_files (GPtrArray *source_files);