api/geany-1.0.vapi

	[CCode (cheader_filename = "geanyplugin.h", cname = "tm_workspace_add_source_file")]
	public static void tm_workspace_add_source_file (Geany.TMSourceFile source_file);
	[CCode (cheader_filename = "geanyplugin.h", cname = "tm_workspace_add_source_files")]
	public static void tm_workspace_add_source_files (GLib.GenericArray<Geany.TMSourceFile> source_files);
	[CCode (cheader_filename = "geanyplugin.h", cname = "tm_workspace_remove_source_file")]
	public static void tm_workspace_remove_source_file (Geany.TMSourceFile source_file);
	[CCode (cheader_filename = "geanyplugin.h", cname = "tm_workspace_remove_source_files")]
	public static void tm_workspace_remove_source_files (GLib.GenericArray<Geany.TMSourceFile> source_files);
}
